# qumeld

./: .env.default  .gitignore  .gitmodules  README.md  cli.py  main.py  pyproject.toml  requirements.txt  test.py
analysis/: algorithm_analysis.ipynb  circuit_analysis.ipynb  topology_analysis.ipynb  utils.py
error_mitigation/: dynamical_decoupling.py  pauli_twirling.py  trex.py  utils.py  zero_noise_extrapolation.py
examples/: run_basic_qml.py  run_ibm_fake_backend.py  run_mapper_selector.py  run_vqe_h2.py  run_vqe_h2_v2.py  run_with_error_mitigation.py
examples/circuits/: basic_5_qubit.qasm
executing_algorithms/: run_circuit.py
experiments/: experiments_runner.py  run_doustra.py  run_experiments.py  run_pauliforest.py  run_pauliforest_old.py  run_qiskit.py  run_qiskit_ai_transpiler.py  run_rustiq.py  run_sabre.py  types.py
external_quantum_compilers/PauliGo/: ExactBenchmark.py  README.md  compiler.py  example.txt  fidelity.py  molecules.py  parallel_bl.py  start.py  synthesis_SC.py  synthesis_sd.py  test.py  tools.py
external_quantum_compilers/Paulihedral_new/: config.py  gene_benchmark.py  parallel_bl.py  paulihedral.ipynb  qubit_place.py  real_system.py  (+9 more)
quantum_algorithms/: base_provider.py  hamiltonians.py  registry.py  vqe.py
routing_algorithms/: utils.py
scripts/: run_circuit_optimisation.py  run_experiments.py  run_extract_backend_features.py  run_extract_circuit_features.py  run_generalisation_evaluation.py  run_tests.py
stats_utils/: estimated_value.py  types.py
testing/: test_suite.py
tests/: test_suite.py
topologies/: topologies.py
(+202 files in other folders)
